--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PetsMuggy</title>
+  <title>PetsHuggy</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
-	
-<!-- flash -->
+
+<!-- flashにメッセージがある時 -->
 <% unless flash.empty? %>
 	<script type="text/javascript">
 		<% flash.each do |f| %>
-			<% type = f[0].to_s.gsub('alert', 'error').gsub('notice','info') %>
+			<% type = f[0].to_s.gsub('alert','error').gsub('notice','info') %>
 			toastr['<%= type %>']('<%= f[1] %>');
 		<% end %>
 	</script>
