--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -165,15 +165,18 @@
     </div>  
 
 
-    <!-- レビュー    -->
-    <div class="row">
-        <div class="col-md-9">
-            <h3 class="row-space-3">レビュー</h3>
-        </div>
+    <!-- レビュー     -->
+    <div class="row row-space-4">
+      <div class="col-md-9">
+        <h3 class="row-space-3">レビュー<%= @reviews.count %>件</h3>
+        <div id="average_star_rate"></div>
+          <%= render 'reviews/form' if @currentUserBooking && !@currentUserReview %>
+          <%= render 'reviews/list' %>
+      </div>
 
-        <div class="col-md-3">
-        
-        </div>
+      <div class="col-md-3">
+      
+      </div>
     </div>
 
     <!-- google map    -->
@@ -199,6 +202,7 @@
     <div class="row">
         <div class="col-md-9">
             <h3 class="row-space-3">近くのリスティング</h3>
+            
             <% for listing in @listing.nearbys(10) %>
                 <div class="col-md-4">
                     <div class="panel panel-default">
@@ -419,4 +423,12 @@ $(function() {
     }
   });
 });
+</script>
+
+<script>
+  $('#average_star_rate').raty({
+      path: '/assets',
+      readOnly: true,
+      score: <%= @listing.average_star_rate %>
+  });
 </script>
